Fixed spacing issue.

--- a/style_MMC.css
+++ b/style_MMC.css
@@ -201,15 +201,7 @@ body {
 }
 
 @media (max-width: 625px) {
-	.frontPicturesLandscape {
-		max-width: 100%;
-		max-height: 300px;
-	}
-
-	.frontPicturesPortrait {
-		max-width: 80%;
-		max-height: 300px;
-	}
+	
 	#brandName {
 	color: green;
 	font-size: .9rem;
